Ticket #28009: Fixed userselect preventing scroll when enlarging column.
The CSS property "user-select: none;" prevented horizontal scrolling of
the table when increasing column sizes over the Edge of the viewport.

--- a/com.top_logic.themes.core/src/main/webapp/style/tables.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/tables.css
@@ -1464,7 +1464,6 @@ th:last-child .px-1 {
 	top: 0;
 	right: -8px;
 	height: 100%;
-	user-select: none;
 	z-index: 1;
 }
 
